build-and-deploy : test-1.yml

--- a/.github/workflows/node-s3.yml
+++ b/.github/workflows/node-s3.yml
@@ -1,7 +1,6 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI
+name: Frontend build and push to s3
 
 on:
   push:
@@ -10,22 +9,40 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  install-and-build:
+    runs-on: self-hosted
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+        node-version: [14.x, 16.x, 18.x]
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18.19.1
+
+      - name: Install Dependencies
+        run: yarn install
+
+      - name: Build Frontend
+        run: yarn build
+
+  deploy_to_s3:
+    runs-on: self-hosted
+    needs: [install-and-build]
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Deploy to S3 Bucket
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --delete --exclude '.git/*'
+          bucket_url: s3://subash-frontend
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
