--- a/.github/workflows/node-s3.yml
+++ b/.github/workflows/node-s3.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: self-hosted
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -37,12 +37,18 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy to S3 Bucket
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --delete --exclude '.git/*'
-          bucket_url: s3://subash-frontend
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+#        uses: jakejarvis/s3-sync-action@master
+        uses: actions/checkout@v2
+        # with:
+        #   args: --delete --exclude '.git/*'
+        #   bucket_url: s3://subash-frontend
+        # env:
+        #   AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #   AWS_REGION: ${{ secrets.AWS_REGION }}
+        
+         run: |
+          aws s3 sync dist/ s3://${AWS_S3_BUCKET}/ --delete
+
+      
