--- a/.github/workflows/node-s3.yml
+++ b/.github/workflows/node-s3.yml
@@ -42,13 +42,13 @@ jobs:
         # with:
         #   args: --delete --exclude '.git/*'
         #   bucket_url: s3://subash-frontend
-        # env:
-        #   AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-        #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        #   AWS_REGION: ${{ secrets.AWS_REGION }}
-        
-         run: |
-          aws s3 sync dist/ s3://${AWS_S3_BUCKET}/ --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+
+          run: |
+            aws s3 sync dist/ s3://${AWS_S3_BUCKET}/ --delete
 
       
