--- a/.github/workflows/node-s3.yml
+++ b/.github/workflows/node-s3.yml
@@ -37,11 +37,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy to S3 Bucket
-#        uses: jakejarvis/s3-sync-action@master
-        uses: actions/checkout@v2
-        # with:
-        #   args: --delete --exclude '.git/*'
-        #   bucket_url: s3://subash-frontend
+        uses: jakejarvis/s3-sync-action@master
+        with:
+           args: --delete --exclude '.git/*' dist/
+           bucket_url: s3://subash-frontend
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
