--- a/.github/workflows/node-s3.yml
+++ b/.github/workflows/node-s3.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Deploy to S3 Bucket
         uses: jakejarvis/s3-sync-action@master
         with:
-           args: --delete --exclude '.git/*' dist/
+           args: --delete --exclude '.git/*'
            bucket_url: s3://subash-frontend
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
