--- a/.github/workflows/node-s3.yml
+++ b/.github/workflows/node-s3.yml
@@ -29,10 +29,21 @@ jobs:
       - name: Build Frontend
         run: yarn build
 
+      - name: Archive dist folder
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist/
+
   deploy_to_s3:
     runs-on: self-hosted
     needs: [install-and-build]
     steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
       - name: Checkout Repository
         uses: actions/checkout@v2
 
@@ -40,7 +51,7 @@ jobs:
         uses: jakejarvis/s3-sync-action@master
         with:
            args: --delete --exclude '.git/*'
-           bucket_url: s3://subash-frontend
+           
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -49,5 +60,4 @@ jobs:
 
           run: |
             aws s3 sync dist/ s3://${AWS_S3_BUCKET}/ --delete
-
-      
+          #  run: aws s3 sync dist/ s3://subash-frontend --delete --exclude ".git/*"
