--- a/.github/workflows/node-s3.yml
+++ b/.github/workflows/node-s3.yml
@@ -49,8 +49,8 @@ jobs:
 
       - name: Deploy to S3 Bucket
         uses: jakejarvis/s3-sync-action@master
-        with:
-           args: --delete --exclude '.git/*'
+        #with:
+          # args: --delete --exclude '.git/*' dist/
            
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
@@ -61,3 +61,5 @@ jobs:
           run: |
             aws s3 sync dist/ s3://${AWS_S3_BUCKET}/ --delete
           #  run: aws s3 sync dist/ s3://subash-frontend --delete --exclude ".git/*"
+
+      
