--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,6 +41,6 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
 
           run: |
-            aws s3 sync dist/ s3://${AWS_S3_BUCKET}/ --delete
+            aws s3 sync dist/ s3://${{ secrets.AWS_S3_BUCKET }}/ --delete --exclude "*" --include "*" --include "*/"
           #  aws s3 sync dist/ s3://${AWS_S3_BUCKET}/ --delete
           #  run: aws s3 sync dist/ s3://subash-frontend --delete --exclude ".git/*"
