--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,6 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-name: Single job 
+name: Frontend build and push to s3
 
 on:
   push:
@@ -28,19 +28,26 @@ jobs:
 
       - name: Build Frontend
         run: yarn build
-        
+      
+      - name: Copy dist folder to local directory
+        run: mkdir dist_local && cp -r dist/* dist_local/
+
       - name: Deploy to S3 Bucket
         uses: jakejarvis/s3-sync-action@master
         #with:
-          # args: --delete --exclude '.git/*' node_modules/
-           
+          # args: --delete --exclude '.git/*' dist/
+
+      - name: Copy dist folder to S3 using cp
+        run: aws s3 cp dist_local/ s3://${{ secrets.AWS_S3_BUCKET }}/ --recursive 
+
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
 
-          run: |
-            aws s3 sync dist/ s3://${{ secrets.AWS_S3_BUCKET }}/ --delete --exclude "*" --include "*" --include "*/"
+         # run: |
           #  aws s3 sync dist/ s3://${AWS_S3_BUCKET}/ --delete
           #  run: aws s3 sync dist/ s3://subash-frontend --delete --exclude ".git/*"
+
+      
