--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,4 +43,4 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
 
       - name: Copy dist folder to S3 using cp
-        run: aws s3 cp dist_local/ s3://${{ secrets.AWS_S3_BUCKET }}/ --recursive 
+        run: aws s3 cp . s3://subash-test-frontend --recursive --exclude "*" --include "./dist/*" 
