--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Deploy to S3 Bucket
         uses: jakejarvis/s3-sync-action@master
-        #with:
-          # args: --delete --exclude '.git/*' dist/
+        with:
+           args: --delete --exclude '*' 
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -43,4 +43,4 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
 
       - name: Copy dist folder to S3 using cp
-        run: aws s3 cp . s3://subash-test-frontend --recursive --exclude "*" --include "./dist/*" 
+        run: aws s3 sync dist/ s3://${AWS_S3_BUCKET}/ --delete 
