--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,5 +42,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
 
-      - name: Copy dist folder to S3 using cp
+      - name: Copy dist folder to S3 sync
         run: aws s3 sync dist/ s3://subash-frontend --delete 
