--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,10 +37,25 @@ jobs:
         with:
            args: --delete --exclude '*' 
         env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
 
-      - name: Copy dist folder to S3 sync
+      - name: Copy dist folder to S3 using cp
         run: aws s3 sync dist/ s3://subash-frontend --delete 
+        
+  increase-version:
+    runs-on: self-hosted
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set Git user identity
+      run: |
+          git config --global user.email "subaschy729@gmail.com"
+          git config --global user.name "Subash Chaudhary"
+      
+    - name: Increase version in package.json
+      run: |
+          yarn version --patch
+
+
+      
