--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,6 +37,7 @@ jobs:
         with:
            args: --delete --exclude '*' 
         env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -45,8 +46,8 @@ jobs:
         run: aws s3 sync dist/ s3://subash-frontend --delete 
         
   increase-version:
-    runs-on: self-hosted
     needs: install-and-build
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
     - name: Set Git user identity
@@ -57,6 +58,3 @@ jobs:
     - name: Increase version in package.json
       run: |
           yarn version --patch
-
-
-      
